<resources>
    <string name="app_name">w2d3-as1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_nameET">Name</string>
    <string name="lbl_emailET">Email Address</string>
    <string name="lbl_ageET">Age</string>
    <string name="lbl_pictureBTN">TAKE PICTURE</string>
    <string name="lbl_saveBTN">SAVE</string>
    <string name="lbl_listBTN">LIST</string>
</resources>
