<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryFragment">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_nameET"/>
    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_emailET"/>
    <EditText
        android:id="@+id/ageET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_ageET"/>

    <Button
        android:id="@+id/pictureBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_pictureBTN"/>
    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_saveBTN"/>
    <Button
        android:id="@+id/listBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_listBTN"/>
</LinearLayout>